src/test/deca/syntax/invalid/unknown_type.deca
// Description:
//    Unkown type
//
// Resultats:
//    Erreur syntaxique 
//    Ligne 8 : no viable alternative at input 'myType'

myType x = new myType();
